fix too close reply-delete buttons

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,11 @@
  *= require_tree .
  */
 
+.btn {
+    margin-left: 2px;
+    margin-right: 2px;
+}
+
 #content {
     padding: 60px 15px 0;
 }
